mf-app/environments/ci/routes/mf-app-stage-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mf-app-post-stage
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: mf-app-post-stage
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: "Service"
    name: el-mf-app-post-stage
    weight: 100
  port:
    targetPort: http-listener
  wildcardPolicy: None
